k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
  annotations:
    # cloud.google.com/app-protocols: '{"web-port":"HTTP2"}'
    cloud.google.com/backend-config: '{"default": "tsdip-web-backend-config"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  ports:
    - name: web-port
      port: 80
      targetPort: 3000
