k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ing
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: tsdip-web-staging
    networking.gke.io/managed-certificates: tsdip-web-tls-cert
    # networking.gke.io/v1beta1.FrontendConfig: ''
spec:
  backend:
    serviceName: svc
    servicePort: 80
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: svc
              servicePort: 80
